Published for target 1.8